--- a/ProyectoConjunto_MValenzuela_MValadez.ipynb
+++ b/ProyectoConjunto_MValenzuela_MValadez.ipynb
@@ -271,11 +271,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.\n",
+    "\n",
+    "$$ G(x) = \\int_{0}^{x} \\frac{\\pi}{2}\\sin(\\pi u) du = [-\\frac{\\cos (\\pi u)}{2\\pi} ]_{0}^{\\pi} = \\frac{1}{2}-\\frac{\\cos (\\pi x)}{2\\pi} $$ \n",
+    "\n",
+    "$$ \\frac{1}{2}-\\frac{\\cos (\\pi x)}{2\\pi} = U $$\n",
+    "\n",
+    "Despejamos X\n",
+    "\n",
+    "$$\\cos(\\pi x )  = 1-2\\pi U $$\n",
+    "$$x = \\frac{1}{\\pi}\\arccos(1-2\\pi U)$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#4 \n",
+    "def distribucion(N):\n",
+    "    return ((1/np.pi)*np.arccos(1-2*np.pi*np.random.random(N))\n",
+    "N=10000\n",
+    "g= lambda g:((np.sin(np.pi*x)/(2/np.pi)))\n",
+    "x= np.arange(0,1,.01)\n",
+    "x1= distribucion(N)\n",
+    "plt.plot(x,g(x),label=\"g(x)\")\n",
+    "plt.hist(x1,100,density=True)\n",
+    "plt.xlabel(\"valores aleatorios\")\n",
+    "plt.ylabel(\"Probabilidades\")\n",
+    "plt.title(\"Histograma\")\n",
+    "plt.show()"
+   ]
   },
   {
    "attachments": {
